# zellij-spiral

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  shell.nix
.github/workflows/: release.yml
screenshots/: Bottom-DownLeft.txt  Bottom-DownRight.txt  Bottom-InClock.txt  Bottom-InCounter.txt  Bottom-OutClock.txt  Bottom-OutCounter.txt  Bottom-PinwheelCcw.txt  Bottom-PinwheelCw.txt  Bottom-StaircaseCcw.txt  Bottom-StaircaseCw.txt  Bottom-UpLeft.txt  Bottom-UpRight.txt  INDEX.md  Left-DownLeft.txt  Left-DownRight.txt  Left-InClock.txt  Left-InCounter.txt  Left-OutClock.txt  Left-OutCounter.txt  Left-PinwheelCcw.txt  Left-PinwheelCw.txt  Left-StaircaseCcw.txt  Left-StaircaseCw.txt  Left-UpLeft.txt  Left-UpRight.txt  Right-DownLeft.txt  Right-DownRight.txt  Right-InClock.txt  Right-InCounter.txt  Right-OutClock.txt  Right-OutCounter.txt  Right-PinwheelCcw.txt  Right-PinwheelCw.txt  Right-StaircaseCcw.txt  Right-StaircaseCw.txt  Right-UpLeft.txt  Right-UpRight.txt  Top-DownLeft.txt  Top-DownRight.txt  Top-InClock.txt  (+9 more)
src/: main.rs
test/: gen-matrix.sh  headless-test.sh  render-ascii.js  screenshot.sh
