[package]
name = "zellij-spiral"
version = "0.2.0"
edition = "2021"
description = "zellij plugin: focused pane gets the big slot, others ordered by most-recently-focused"
license = "MIT OR Apache-2.0"

[dependencies]
# Forked zellij-tile: adds override_layout_with_pane_ordering, the plugin command
# that binds specific retained panes to specific layout leaf slots — the API stock
# zellij lacks, which lets the focused/MRU pane occupy the dominant spiral slot.
zellij-tile = { git = "https://github.com/bddap-bot/zellij", branch = "pane-slot-binding" }
